getting now whwere

--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -12,55 +12,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!pip3 install flash-attn --no-build-isolation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "!pip3 install flash-attn --no-build-isolation\n",
     "!pip3 install llama-index llama-parse llama-index-embeddings-huggingface llama-index-llms-huggingface dspy-ai openpyxl langchain chromadb\n",
     "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate\n",
-    "!cp /workspace/repos/agentic-ai/MASTER\\ -\\ PYTHON\\ -\\ SCORING\\ MODEL\\ -\\ MCG\\ MADISON\\ RIDGE\\ DST\\ -\\ v2.0.xlsx /workspace/data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!cp /workspace/repos/agentic-ai/PPM\\ -\\ MCG\\ MADISON\\ RIDGE\\ DST.pdf /workspace/data\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip3 uninstall -y torch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "!cp /workspace/repos/agentic-ai/MASTER\\ -\\ PYTHON\\ -\\ SCORING\\ MODEL\\ -\\ MCG\\ MADISON\\ RIDGE\\ DST\\ -\\ v2.0.xlsx /workspace/data\n",
+    "!cp /workspace/repos/agentic-ai/PPM\\ -\\ MCG\\ MADISON\\ RIDGE\\ DST.pdf /workspace/data\n",
+    "!pip3 uninstall -y torch\n",
     "!pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/pydantic/_internal/_fields.py:161: UserWarning: Field \"model_id\" has conflict with protected namespace \"model_\".\n",
-      "\n",
-      "You may be able to resolve this warning by setting `model_config['protected_namespaces'] = ()`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gc\n",
     "import os\n",
@@ -107,28 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n",
-      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n",
-      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n",
-      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n",
-      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n",
-      "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "disposition_inputs = [\n",
@@ -163,32 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "first model load...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deleting model...\n",
-      "reloading model...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
@@ -284,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,17 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Documents created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
@@ -347,8 +262,8 @@
     "print(\"Documents created\")\n",
     "\n",
     "# Settings.llm = rm_llm\n",
-    "Settings.chunk_size = 300\n",
-    "Settings.chunk_overlap = 50\n",
+    "Settings.chunk_size = 100\n",
+    "Settings.chunk_overlap = 25\n",
     "\n",
     "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
     "# embed_model_name = \"Alibaba-NLP/gte-Qwen1.5-7B-instruct\"\n",
@@ -361,7 +276,7 @@
     "index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
     "query_engine = index.as_retriever(similarity_top_k=2)\n",
     "\n",
-    "Settings.embed_model = embed_model\n",
+    "# Settings.embed_model = embed_model\n",
     "\n",
     "# index.set_index_id(\"vector_index\")\n",
     "# index.storage_context.persist(\"/workspace/data/storage\")\n",
@@ -429,7 +344,7 @@
    "source": [
     "import random\n",
     "# dfs_str = get_csv_string(dfs)\n",
-    "num_rounds = 10\n",
+    "num_rounds = 5\n",
     "train_data = []\n",
     "for _ in range(num_rounds):\n",
     "    # TODO: gradually increase n_samples, random fill in of values in range\n",
@@ -457,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +404,24 @@
     "#     for param in obj.parameters():\n",
     "#         param.reset()\n",
     "\n",
-    "#     return obj"
+    "#     return obj\n",
+    "\n",
+    "############################or############################# \n",
+    "\n",
+    "# in llama_index/core/schema.py comment out line 84\n",
+    "# 84  state[\"__private_attribute_values__\"] = {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in spreadsheeet_ananlyst.query_engine._embed_model._model[0].named_parameters():\n",
+    "    print(p[1][:,0].mean().item())\n",
+    "    break\n",
+    "    "
    ]
   },
   {
@@ -508,13 +440,14 @@
     "\n",
     "#Configure model to finetune\n",
     "config = dict(target=model_name, epochs=10, bf16=True, bsize=1, accumsteps=3, lr=8e-5) #path_prefix=None\n",
+    "# config = dict(bf16=True, bsize=1, accumsteps=3, lr=8e-5) #path_prefix=None\n",
     "\n",
     "#Compile program on BootstrapFinetune\n",
     "finetune_optimizer = BootstrapFinetune(metric=metric)\n",
     "# finetune_optimizer = BootstrapFewShot(metric=metric)\n",
     "\n",
-    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], **config)\n",
-    "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data[:22])\n",
+    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data, **config)\n",
+    "# finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=train_data)\n",
     "\n",
     "# finetune_program = spreadsheeet_ananlyst\n",
     "\n",
@@ -533,18 +466,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spreadsheeet_ananlyst.reset_copy?"
+    "for p in finetune_program.query_engine._embed_model._model[0].named_parameters():\n",
+    "    print(p[1][:,0].mean().item())\n",
+    "    break\n",
+    "    "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "#Load program and activate model's parameters in program before evaluation\n",
-    "ckpt_path = \"/workspace/repos/finetuning_ckpts/4Q6YOISLR4V7G.all/checkpoint-35\"\n",
-    "LM = dspy.HFModel(checkpoint=ckpt_path, model=model_name)\n",
+    "ckpt_path = \"/workspace/repos/finetuning_ckpts/4ZJQ0TT7BN82R.all/checkpoint-42\"\n",
+    "LM = dspy.HFModel(checkpoint=ckpt_path, model=model_name, hf_device_map='cuda:0')\n",
     "\n",
-    "for p in finetune_program.predictors():\n",
+    "for p in spreadsheeet_ananlyst.predictors():\n",
     "    p.lm = LM\n",
     "    p.activated = False"
    ]
@@ -592,12 +530,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "input_data = \"\"\n",
-    "for string in final_split_dfs:\n",
-    "    input_data += string"
+    "# dfs_str = get_csv_string(dfs)\n",
+    "collection = []\n",
+    "for value_to_extract in gt_collect:\n",
+    "    # if value_to_extract==\"Selling Costs\":\n",
+    "        # continue\n",
+    "    question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
+    "    print(question)\n",
+    "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
+    "    print(pred.answer)\n",
+    "    collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in collection:\n",
+    "    print(i[0].answer,\"---\", i[1])"
    ]
   },
   {
@@ -609,9 +566,9 @@
     "# dfs_str = get_csv_string(dfs)\n",
     "collection = []\n",
     "for value_to_extract in gt_collect:\n",
-    "    question = f\"Extract the value for the variable name: {value_to_extract}?\"\n",
+    "    question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
     "    print(question)\n",
-    "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
+    "    pred = finetune_program(question, verbose=True)\n",
     "    collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
    ]
   },
@@ -632,25 +589,6 @@
    "outputs": [],
    "source": [
     "np.mean([i[0].answer == i[1] for i in collection])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# baseline RAG and extractor only 0.35294117647058826\n",
-    "# baseline RAG, extractor, float and format checks 0.35294117647058826"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "finetune_program"
    ]
   },
   {
@@ -697,39 +635,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dspy.teleprompt import BootstrapFewShotWithRandomSearch, BootstrapFinetune\n",
-    "perc_train = 0.7\n",
-    "num_train = int(len(train_data) * perc_train)\n",
-    "metric = dspy.evaluate.metrics.answer_exact_match\n",
-    "\n",
-    "#Compile program on current dspy.settings.lm\n",
-    "fewshot_optimizer = BootstrapFewShotWithRandomSearch(metric=metric, max_bootstrapped_demos=2, num_threads=1)\n",
-    "your_dspy_program_compiled = tp.compile(spreadsheeet_ananlyst, trainset=train_data[:num_train], valset=train_data[num_train:])\n",
-    "\n",
-    "#Configure model to finetune\n",
-    "config = dict(target=llm.model, epochs=2, bf16=True, bsize=1, accumsteps=2, lr=5e-5)\n",
-    "\n",
-    "#Compile program on BootstrapFinetune\n",
-    "finetune_optimizer = BootstrapFinetune(metric=metric)\n",
-    "finetune_program = finetune_optimizer.compile(spreadsheeet_ananlyst, trainset=some_new_dataset_for_finetuning_model, **config)\n",
-    "\n",
-    "finetune_program = spreadsheeet_ananlyst\n",
-    "\n",
-    "#Load program and activate model's parameters in program before evaluation\n",
-    "ckpt_path = \"saved_checkpoint_path_from_finetuning\"\n",
-    "LM = dspy.HFModel(checkpoint=ckpt_path, model=llm.model)\n",
-    "\n",
-    "for p in finetune_program.predictors():\n",
-    "    p.lm = LM\n",
-    "    p.activated = False"
-   ]
   },
   {
    "cell_type": "code",
