--- a/llamaindex.ipynb
+++ b/llamaindex.ipynb
@@ -1,30 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Agent use case #1 - Financial data collection\n",
-    "\n",
-    "* Build dataset (possibly revisit information compression)\n",
-    "  * Design targets using price data\n",
-    "  * Build dataset justifying the target\n",
-    "\n",
-    "* Collect time series data\n",
-    "  * preprocess \n",
-    "  * Create features\n",
-    "* Collect news\n",
-    "  * Preprocess\n",
-    "  * Extract trading info\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip3 install llama-index-llms-ollama"
+    "!pip3 install llama-index llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api\n",
+    "!pip3 install openpyxl"
    ]
   },
   {
@@ -33,9 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install -U llama-index --upgrade --no-cache-dir --force-reinstall\n",
-    "!pip3 install llama-parse llama-agents llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-huggingface-api\n",
-    "!pip3 install openpyxl"
+    "!pip3 uninstall -y torch\n",
+    "!pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
    ]
   },
   {
@@ -51,9 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from llama_index.llms.ollama import Ollama\n",
+    "# from llama_index.llms.ollama import Ollama\n",
+    "from llama_index.llms.huggingface import HuggingFaceLLM\n",
     "\n",
-    "llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://localhost:11434')"
+    "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
+    "llm = HuggingFaceLLM(model_name=model_name)\n",
+    "# llm = Ollama(model=\"mistral\", request_timeout=600, base_url='http://localhost:11434')"
    ]
   },
   {
@@ -73,6 +58,15 @@
    "outputs": [],
    "source": [
     "response = llm.complete(\"Who let the dogs out?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
    ]
   },
   {
@@ -178,6 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import torch\n",
     "from llama_index.llms.huggingface_api import HuggingFaceInferenceAPI\n",
     "from llama_index.embeddings.huggingface import HuggingFaceEmbedding\n",
@@ -193,6 +188,8 @@
     "    StorageContext,\n",
     "    load_index_from_storage,\n",
     ")\n",
+    "import dotenv\n",
+    "dotenv.load_dotenv('/workspace/repos/agentic-ai.env')\n",
     "\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
@@ -200,27 +197,29 @@
     "# set_global_tokenizer(\n",
     "#     AutoTokenizer.from_pretrained(\"HuggingFaceH4/zephyr-7b-alpha\").encode\n",
     "# )\n",
-    "\n",
+    "access_token = os.getenv('HF_TOKEN')\n",
+    "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
     "\n",
     "\n",
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
     "# documents[0].text = documents[0].text.split(\"\\n\")\n",
     "import os\n",
-    "os.environ['HF_TOKEN']=access_token\n",
     "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
     "# model_name=\"HuggingFaceH4/zephyr-7b-alpha\"\n",
     "tokenizer_name = model_name\n",
     "embed_model_name = \"BAAI/bge-small-en-v1.5\"\n",
-    "# hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name)\n",
-    "hf_llm = HuggingFaceInferenceAPI(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, is_function_calling_model=True)\n",
+    "hf_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name)\n",
+    "Settings.llm = hf_llm\n",
+    "\n",
+    "Settings.chunk_size = 100\n",
+    "Settings.chunk_overlap = 25\n",
+    "# hf_llm = HuggingFaceInferenceAPI(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, is_function_calling_model=True)\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "vector_index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
     "# vector_index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
     "query_engine = vector_index.as_query_engine(llm=hf_llm, top_k=3)\n",
-    "\n",
-    "Settings.llm = hf_llm\n",
-    "Settings.embed_model = embed_model"
+    "Settings.embed_model = embed_model\n"
    ]
   },
   {
@@ -239,13 +238,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "response = query_engine.query(\"What is the value for 'Return of Maximum Offering Amount'? It is a negative number less than 0.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from llama_index.core.tools import QueryEngineTool, ToolMetadata\n",
     "\n",
     "query_engine_tools = QueryEngineTool(\n",
     "    query_engine=query_engine,\n",
     "    metadata=ToolMetadata(\n",
     "        name=\"value_retriever\",\n",
-    "        description=\"useful for retrieving specific values from a spreadsheet\",\n",
+    "        description=\"provides useful information about a query.\",\n",
     "    ),\n",
     ")\n",
     "\n",
@@ -297,7 +314,7 @@
     ")\n",
     "\n",
     "from llama_index.core.agent import FunctionCallingAgentWorker\n",
-    "from llama_index.core.agent import ReActAgentWorker\n",
+    "from llama_index.core.agent import ReActAgentWorker, ReActAgent\n",
     "\n",
     "# create our multi-agent framework components\n",
     "message_queue = SimpleMessageQueue()\n",
@@ -311,7 +328,7 @@
     "# define Tool Service\n",
     "tool_service = ToolService(\n",
     "    message_queue=message_queue,\n",
-    "    tools=[query_engine_tools, adding_tool],\n",
+    "    tools=[query_engine_tools],\n",
     "    running=True,\n",
     "    step_interval=0.5,\n",
     ")\n",
@@ -323,25 +340,27 @@
     "        message_queue=message_queue,\n",
     "        tool_service=tool_service,\n",
     "    )\n",
-    "    for t in [query_engine_tools, adding_tool]\n",
+    "    for t in [query_engine_tools]\n",
     "]\n",
     "\n",
     "\n",
     "# define Agent and agent service\n",
-    "worker1 = FunctionCallingAgentWorker.from_tools(\n",
+    "worker1 = FunctionCallingAgent.from_tools(\n",
     "# worker1 = ReActAgentWorker.from_tools(\n",
+    "# worker1 = ReActAgent.from_tools(\n",
+    "    # [query_engine_tools],\n",
     "    meta_tools,\n",
     "    # tool_service,\n",
     "    llm=hf_llm,\n",
+    "    # max_iterations=15\n",
     ")\n",
-    "# agent1 = worker1.as_agent()\n",
     "agent1 = worker1.as_agent()\n",
-    "agent_server_1 = AgentService(\n",
-    "    agent=agent1,\n",
-    "    message_queue=message_queue,\n",
-    "    description=\"Used to retrieve values from a spreadsheet\",\n",
-    "    service_name=\"spreadsheet_reader_agent\",\n",
-    ")"
+    "# agent_server_1 = AgentService(\n",
+    "#     agent=agent1,\n",
+    "#     message_queue=message_queue,\n",
+    "#     description=\"Used to retrieve values from a spreadsheet that has been converted to a string.\",\n",
+    "#     service_name=\"spreadsheet_reader_agent\",\n",
+    "# )"
    ]
   },
   {
@@ -350,10 +369,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "\n",
-    "# change logging level to enable or disable more verbose logging\n",
-    "logging.getLogger(\"llama_agents\").setLevel(logging.INFO)"
+    "worker2 = ReActAgent.from_llm(llm=hf_llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = worker2.query(\"What is the value for Selling Costs? It is a value between 0 and 1.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.response)"
    ]
   },
   {
@@ -369,15 +403,6 @@
     ")\n",
     "query_str = \"What is the Disposition Fee?\"\n",
     "result = launcher.launch_single(query_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LocalLauncher?"
    ]
   },
   {
@@ -489,7 +514,8 @@
     "data=documents[0].text\n",
     "usr_msg = ChatMessage(\n",
     "    role=MessageRole.USER,\n",
-    "    content=f\"What is the sum of Disposition Fee and Sales Cost from this spreadsheet?\\n\\n##SPREADSHEET\\n{data}\",\n",
+    "    # content=f\"What is the sum of Disposition Fee percentage and Sales Cost percentage from this spreadsheet?\\n\\n##SPREADSHEET\\n{data}\",\n",
+    "    content=f\"Extract the percentage values for 'Disposition Fee' and 'Sales Cost' from this spreadsheet?\\n\\n##SPREADSHEET\\n{data}\",\n",
     ")\n",
     "\n",
     "response = hf_llm.chat(\n",
@@ -500,7 +526,25 @@
     "    tool_choice=\"add_values\",\n",
     ")\n",
     "\n",
-    "print(response.message.additional_kwargs)"
+    "print(response.message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.message)"
    ]
   },
   {
@@ -843,6 +887,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
