--- a/dspy_multiagent_fine_tune.ipynb
+++ b/dspy_multiagent_fine_tune.ipynb
@@ -50,15 +50,15 @@
     "from chromadb.utils import embedding_functions\n",
     "from langchain.text_splitter import SentenceTransformersTokenTextSplitter\n",
     "from llama_index.readers.file import PandasExcelReader\n",
-    "CHROMA_COLLECTION_NAME = \"blockchain_and_ai\"\n",
-    "CHROMADB_DIR = \"/workspace/data/db/\"\n",
+    "# CHROMA_COLLECTION_NAME = \"blockchain_and_ai\"\n",
+    "# CHROMADB_DIR = \"/workspace/data/db/\"\n",
+    "# from dspy.retrieve.chromadb_rm import ChromadbRM\n",
     "\n",
     "from typing import List, Any, Callable, Optional\n",
     "from pydantic import BaseModel\n",
     "\n",
     "import torch\n",
     "from transformers import AutoModelForCausalLM\n",
-    "from dspy.retrieve.chromadb_rm import ChromadbRM\n",
     "\n",
     "from train_utils import get_csv_string, randomize_row_values, operators_dict, range_description_json, split_df_by_empty_columns, split_df_by_empty_rows, print_trainable_parameters\n",
     "from models import SpreadSheetAnalyzer\n",
@@ -142,27 +142,27 @@
     "        bnb_4bit_compute_dtype=torch.float16,\n",
     ")\n",
     "\n",
-    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=None, \n",
+    "llm.model=AutoModelForCausalLM.from_pretrained(model_name, quantization_config=quantization_config, \n",
     "                                               trust_remote_code=True, device_map=\"auto\", \n",
     "                                               attn_implementation=\"flash_attention_2\",  \n",
     "                                               torch_dtype=torch.bfloat16)\n",
     "\n",
     "\n",
-    "# from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+    "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
     "\n",
-    "# config = LoraConfig(\n",
-    "#     r=16,\n",
-    "#     lora_alpha=32,\n",
-    "#     target_modules=[\"k_proj\", \"v_proj\", \"q_proj\", \"o_proj\"], # Mistral param names\n",
-    "#     lora_dropout=0.05,\n",
-    "#     bias=\"none\", #\"none\", \"all\", \"lora_only\"\n",
-    "#     task_type=\"CAUSAL_LM\", \n",
+    "config = LoraConfig(\n",
+    "    r=16,\n",
+    "    lora_alpha=32,\n",
+    "    target_modules=[\"k_proj\", \"v_proj\", \"q_proj\", \"o_proj\"], # Mistral param names\n",
+    "    lora_dropout=0.05,\n",
+    "    bias=\"none\", #\"none\", \"all\", \"lora_only\"\n",
+    "    task_type=\"CAUSAL_LM\", \n",
     "    \n",
-    "# )\n",
+    ")\n",
     "\n",
-    "# llm.model = prepare_model_for_kbit_training(llm.model)\n",
-    "# llm.model = get_peft_model(llm.model, config)\n",
-    "# print_trainable_parameters(llm.model)\n",
+    "llm.model = prepare_model_for_kbit_training(llm.model)\n",
+    "llm.model = get_peft_model(llm.model, config)\n",
+    "print_trainable_parameters(llm.model)\n",
     "\n",
     "if model_name == 'mistralai/Mistral-7B-Instruct-v0.3':\n",
     "    llm.model.generation_config.pad_token_id = llm.tokenizer.eos_token_id\n",
@@ -250,18 +250,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from llama_index.core import VectorStoreIndex, get_response_synthesizer\n",
+    "from llama_index.core.retrievers import VectorIndexRetriever\n",
+    "from llama_index.core.query_engine import RetrieverQueryEngine\n",
+    "\n",
     "\n",
     "# model_name = \"mistralai/Mistral-7B-Instruct-v0.3\" # 32K context window\n",
-    "# model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
-    "# tokenizer_name = model_name\n",
+    "model_name = \"Qwen/Qwen2-1.5B-Instruct\"\n",
+    "tokenizer_name = model_name\n",
     "# rm_llm = HuggingFaceLLM(model=dspy_llm.llm, tokenizer_name=tokenizer_name, is_chat_model=True, device_map='auto', max_new_tokens=50, context_window=8000)\n",
-    "# rm_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, is_chat_model=True, device_map='auto', max_new_tokens=50, context_window=8000)\n",
+    "rm_llm = HuggingFaceLLM(model_name=model_name, tokenizer_name=tokenizer_name, model=llm.model, is_chat_model=True, device_map='auto', max_new_tokens=50, context_window=8000)\n",
     "filepath = \"/workspace/data/MASTER - PYTHON - SCORING MODEL - MCG MADISON RIDGE DST - v2.0.xlsx\"\n",
     "documents = PandasExcelReader(sheet_name=\"5 - Disposition Analysis\").load_data(filepath)\n",
     "# documents = parser.load_data(\"/workspace/data/PPM - MCG MADISON RIDGE DST.pdf\")\n",
     "print(\"Documents created\")\n",
     "\n",
-    "# Settings.llm = rm_llm\n",
+    "Settings.llm = rm_llm\n",
     "Settings.chunk_size = 100\n",
     "Settings.chunk_overlap = 25\n",
     "\n",
@@ -269,12 +273,33 @@
     "# embed_model_name = \"Alibaba-NLP/gte-Qwen1.5-7B-instruct\"\n",
     "embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
-    "# embed_model.num_workers = 1\n",
+    "# for p in embed_model._model.named_parameters():\n",
+    "#     p[1].requires_grad = False\n",
     "\n",
     "# KeywordTableSimpleRetriever\n",
     "index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
-    "index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
-    "query_engine = index.as_retriever(similarity_top_k=2)\n",
+    "\n",
+    "# configure retriever\n",
+    "retriever = VectorIndexRetriever(\n",
+    "    index=index,\n",
+    "    similarity_top_k=2,\n",
+    ")\n",
+    "\n",
+    "# configure response synthesizer\n",
+    "response_synthesizer = get_response_synthesizer(\n",
+    "    response_mode=\"tree_summarize\",\n",
+    ")\n",
+    "\n",
+    "# assemble query engine\n",
+    "query_engine = RetrieverQueryEngine(\n",
+    "    retriever=retriever,\n",
+    "    response_synthesizer=response_synthesizer,\n",
+    ")\n",
+    "# index = VectorStoreIndex.from_documents(documents, embed_model=embed_model)\n",
+    "# index = VectorStoreIndex.from_documents(final_split_dfs, embed_model=embed_model)\n",
+    "# index.storage_context.persist(persist_dir=\"/workspace/data/storage/alpha\")\n",
+    "# query_engine = index.as_query_engine(llm=rm_llm)\n",
+    "# query_engine = index.as_retriever(similarity_top_k=2)\n",
     "\n",
     "# Settings.embed_model = embed_model\n",
     "\n",
@@ -362,15 +387,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "input_data = \"\"\n",
-    "for string in final_split_dfs:\n",
-    "    input_data += string"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -413,10 +429,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for p in spreadsheeet_ananlyst.query_engine._embed_model._model[0].named_parameters():\n",
     "    print(p[1][:,0].mean().item())\n",
@@ -439,7 +453,7 @@
     "# metric = validate_answer\n",
     "\n",
     "#Configure model to finetune\n",
-    "config = dict(target=model_name, epochs=10, bf16=True, bsize=1, accumsteps=3, lr=8e-5) #path_prefix=None\n",
+    "config = dict(target=model_name, epochs=10, bf16=True, bsize=1, accumsteps=3, lr=7e-5) #path_prefix=None\n",
     "# config = dict(bf16=True, bsize=1, accumsteps=3, lr=8e-5) #path_prefix=None\n",
     "\n",
     "#Compile program on BootstrapFinetune\n",
@@ -461,10 +475,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for p in finetune_program.query_engine._embed_model._model[0].named_parameters():\n",
     "    print(p[1][:,0].mean().item())\n",
@@ -479,7 +491,7 @@
    "outputs": [],
    "source": [
     "#Load program and activate model's parameters in program before evaluation\n",
-    "ckpt_path = \"/workspace/repos/finetuning_ckpts/4ZJQ0TT7BN82R.all/checkpoint-42\"\n",
+    "ckpt_path = \"/workspace/repos/finetuning_ckpts/5RJNNSMMSP0CM.all/checkpoint-90\"\n",
     "LM = dspy.HFModel(checkpoint=ckpt_path, model=model_name, hf_device_map='cuda:0')\n",
     "\n",
     "for p in spreadsheeet_ananlyst.predictors():\n",
@@ -540,6 +552,24 @@
     "for value_to_extract in gt_collect:\n",
     "    # if value_to_extract==\"Selling Costs\":\n",
     "        # continue\n",
+    "    question = f\"Extract the value for the variable name '{value_to_extract}'? Output in this format: variable name: value.\"\n",
+    "    print(question)\n",
+    "    pred = query_engine.query(question)\n",
+    "    print(pred.response)\n",
+    "    # collection.append((pred, f\"{value_to_extract}: {gt_collect[value_to_extract]}\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dfs_str = get_csv_string(dfs)\n",
+    "collection = []\n",
+    "for value_to_extract in gt_collect:\n",
+    "    # if value_to_extract==\"Selling Costs\":\n",
+    "        # continue\n",
     "    question = f\"Extract the value for the variable name '{value_to_extract}'?\"\n",
     "    print(question)\n",
     "    pred = spreadsheeet_ananlyst(question, verbose=True)\n",
@@ -555,6 +585,15 @@
    "source": [
     "for i in collection:\n",
     "    print(i[0].answer,\"---\", i[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean([i[0].answer == i[1] for i in collection])"
    ]
   },
   {
