--- a/llamaindex.ipynb
+++ b/llamaindex.ipynb
@@ -345,8 +345,8 @@
     "\n",
     "\n",
     "# define Agent and agent service\n",
-    "worker1 = FunctionCallingAgent.from_tools(\n",
-    "# worker1 = ReActAgentWorker.from_tools(\n",
+    "# worker1 = FunctionCallingAgent.from_tools(\n",
+    "worker1 = ReActAgentWorker.from_tools(\n",
     "# worker1 = ReActAgent.from_tools(\n",
     "    # [query_engine_tools],\n",
     "    meta_tools,\n",
@@ -822,15 +822,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.agent.introspective import SelfReflectionAgentWorker"
-   ]
   },
   {
    "cell_type": "code",
